# exapmle-bazel-nextjs

./: .gitignore  BUILD.bazel  README.md  WORKSPACE.bazel  bazel-bin  bazel-example-nextjs  bazel-out  bazel-testlogs  next.config.js  next.config.js.tpl  next_config_js.bzl  package-lock.json  package.json
pages/: index.jsx
